finished portfolio and ready to br develoved

--- a/index.html
+++ b/index.html
@@ -1,1 +1,80 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="icon" href="img/ms1.png" />
+        <title>My Portfolio!</title>
+        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" media="screen and (max-width: 900px)" href="css/phone.css">
+        <link rel="stylesheet" media="screen and (max-width: 695px)" href="css/phone1.css">
+        <link rel="stylesheet" media="screen and (max-width: 1170px)" href="css/tablet.css">
+    </head>
+    <body>
+        <nav class="navbar">
+            <ul>
+                <li><a href="#home"><i class="fas fa-home"></i>&nbsp;&nbsp;Home</a></li>
+                <li><a href="#projects"><i class="fas fa-project-diagram"></i>&nbsp;&nbsp;Projects</a></li>
+                <li><a href="#education"><i class="fas fa-graduation-cap"></i>&nbsp;&nbsp;Education</a></li>
+                <li><a href="#about"><i class="fas fa-address-card"></i>&nbsp;&nbsp;About</a></li>
+                <li><a href="#contact"><i class="fas fa-phone"></i>&nbsp;&nbsp;Contact</a></li>
+            </ul>
+        </nav>
+        <section id="home">
+            <h1 class="heading">WELCOME, THIS IS</h1>
+            <h1 class="heading">SHENG</h1>
+            <br><br>
+            <p>HERE IS MY RESUME</p>
+        </section>
+        <section id="projects">
+            <h1 class="heading">Projects</h1>
+            <div class="gallery">
+                <img src="img/database.png" alt="Hostel Management System">
+                <img src="img/mazegame.png" alt="Maze game">
+                <img src="img/possystem.png" alt="Pos system">
+                <img src="img/teslaclone.png" alt="Tesla Website clone">
+                <img src="img/mad.png" alt="MIT app development">
+            </div>
+        </section>
+        <section id="education">
+            <h1 class="heading">Education</h1>
+            <div class="columns">
+                <div class="box">
+                    <h2>SMJK Seg Hwa</h2>
+                    <p>Join in Chinese Debate Competitions</p>
+                </div>
+                <div class="box">
+                    <h2>Diploma in Informaton Technology</h2>
+                    <p>CGPA 3.8</p>
+                </div>
+            </div>
+        </section>
+        <section id="about">
+            <h1 class="heading">About Me</h1>
+            <div class="about">
+                <img src="img/pixelme.png" alt="My Pic">
+                <div class="name">
+                    <h2>I am a student at Multimedia University studying Diploma in Information Technology</h2>
+                    <p>I want to continue my education with a Bachelor of Computer Science in Software Engineering.
+                        With experience in Chinese debate competitions and serving as a secretary for the Chinese Debate
+                        Society, I have honed my logical thinking abilities. Additionally, as a project and assignment leader in my
+                        University projects, I have developed strong teamwork and leadership skills.</p>
+                </div>
+            </div>
+        </section>
+        <section id="contact">
+            <h1 class="heading">Contact</h1>
+            <h4>Interested to collaborate or to enquire more/ Feel free to contact me at:</h4>
+            <a href="mailto:koomingsheng123@gmail.com" title="email"><i class="fas fa-envelope"></i></a>
+            <a href="https://www.linkedin.com/in/koo-ming-sheng-712290309/" title="linkedin"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.instagram.com/mingsheng1129?igsh=eGtiMXJsdHE0cTZu" title="instagram"><i class="fab fa-instagram"></i></a>
+        </section>
+        <footer>
+            <div class="footer-content">
+                <p class="credit">
+                    &#169; Copyright 2024 Koo Ming Sheng <br>
+                </p>
+            </div>
+        </footer>
+    </body>
 
+</html>
